Update pnpm to version 10.20.0, add supabase as a devDependency, and implement type generation script for Supabase DB types. Modify workspace configuration to include only built dependencies. Enhance README with updated pnpm usage instructions and document the type generation pipeline. Update turbo.json to ensure proper task dependencies for build and typecheck processes.

--- a/packages/supabase/package.json
+++ b/packages/supabase/package.json
@@ -12,10 +12,12 @@
     "lint": "echo 'ok'",
     "test": "echo 'ok'",
     "e2e": "echo 'ok'",
-    "generate": "echo 'ok'"
+    "generate": "node scripts/generate-types.mjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.47.10"
+  },
+  "devDependencies": {
+    "supabase": "^2.54.11"
   }
 }
-
