--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "^generate", "generate", "^typecheck", "typecheck"],
       "outputs": [
         "dist/**",
         ".next/**"
@@ -14,16 +14,18 @@
       "persistent": true
     },
     "typecheck": {
-      "dependsOn": ["^typecheck"],
+      "dependsOn": ["^generate", "generate", "^typecheck"],
       "outputs": []
     },
     "lint": {
       "outputs": []
     },
     "test": {
+      "dependsOn": ["^typecheck", "typecheck"],
       "outputs": []
     },
     "e2e": {
+      "dependsOn": ["^build", "build"],
       "outputs": []
     },
     "generate": {
