Integrate Vitest for testing in web and domain packages, update test scripts, and add initial tests for address input validation. Enhance pnpm-lock.yaml with new dependencies including testing libraries and plugins. Update TypeScript configuration to include Vitest globals.

--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -10,11 +10,13 @@
     "dev": "echo 'skip'",
     "typecheck": "echo 'ok'",
     "lint": "echo 'ok'",
-    "test": "echo 'ok'",
+    "test": "vitest run",
     "e2e": "echo 'ok'"
   },
   "dependencies": {
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "vitest": "^2.1.4"
   }
 }
-
