--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,7 @@
     "start": "next start -p 3000",
     "typecheck": "echo 'ok'",
     "lint": "echo 'ok'",
-    "test": "echo '(no tests)'",
+    "test": "vitest run",
     "e2e": "echo '(no e2e)'",
     "generate": "echo '(no generate)'"
   },
@@ -22,7 +22,13 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@vitejs/plugin-react": "^4.3.2",
+    "jsdom": "^24.1.1",
     "@types/react": "19.2.2",
+    "vitest": "^2.1.4",
     "typescript": "^5.6.3"
   }
 }
