--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,6 +6,7 @@
     "allowJs": true,
     "incremental": true,
     "isolatedModules": true,
+    "types": ["vitest/globals"],
     "plugins": [
       {
         "name": "next"
