--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start -p 3000",
     "typecheck": "echo 'ok'",
-    "lint": "echo 'ok'",
+    "lint": "next lint",
     "test": "vitest run",
     "e2e": "echo '(no e2e)'",
     "generate": "echo '(no generate)'"
@@ -25,10 +25,12 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.6.1",
-    "@vitejs/plugin-react": "^4.3.2",
-    "jsdom": "^24.1.1",
     "@types/react": "19.2.2",
-    "vitest": "^2.1.4",
-    "typescript": "^5.6.3"
+    "@vitejs/plugin-react": "^4.3.2",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.6",
+    "jsdom": "^24.1.1",
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.4"
   }
 }
