Update environment configuration for Week 2 requirements, including mandatory API keys and service URLs. Add FastAPI stub for the Optimizer service with health check and optimization endpoint. Enhance documentation for setup and usage of the Optimizer service, including local development instructions and API request examples.

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 # Environment template for route-kun
-# Week 1 runs with MSW mocks; real keys are optional now.
+# Week 1 runs with MSW mocks; Week 2 からは実キー/URL が必須になります。
 
 # Runtime
 NODE_ENV=development
 
 # Client-side (public) keys
 # Mapbox token is used in the browser. Restrict by domain in Mapbox.
-NEXT_PUBLIC_MAPBOX_TOKEN=
+NEXT_PUBLIC_MAPBOX_TOKEN=pk.test-route-kun
 
 # Server-side keys
 # Google Maps API key is used only on the server for distance/geocode.
-GOOGLE_MAPS_API_KEY=
+GOOGLE_MAPS_API_KEY=AIzaYourGoogleMapsKey
 
 # Supabase project
 # URL and anon key may be used client-side (protected by RLS). Service role is server-only.
@@ -23,11 +23,11 @@ DATABASE_URL=
 
 # Optimizer service (Python/OR-Tools) endpoint
 # For Week 1, leave empty or point to a mock.
-OPTIMIZER_SERVICE_URL=
+OPTIMIZER_SERVICE_URL=http://localhost:8001
 
 # E2E base URL (Playwright)
 PLAYWRIGHT_TEST_BASE_URL=http://localhost:3000
 
 # Notes:
-# - Leave values empty for Week 1 when running with MSW mocks.
-# - When connecting to real services, set the above in `.env.local` (uncommitted).
+# - Week 2 では Mapbox/Google/Optimizer の値が未設定だとアプリが起動しません。
+# - 実運用の値は `.env.local`（コミットしない）に上書きしてください。
