Add optimizer-client package with Zod schema validation and HTTP client implementation. Include fixtures for testing and integrate Vitest for contract testing. Update documentation to reflect new features and usage instructions.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,8 @@
       "@route-kun/domain": ["packages/domain/src"],
       "@route-kun/api": ["packages/api/src"],
       "@route-kun/supabase": ["packages/supabase/src"],
-      "@route-kun/ui": ["packages/ui/src"]
+      "@route-kun/ui": ["packages/ui/src"],
+      "@route-kun/optimizer-client": ["packages/optimizer-client/src"]
     }
   }
 }
-
