Add MSW package for centralized mock service handling, including Google Maps and Optimizer API fixtures. Implement contract tests using Vitest to validate API responses and integrate with existing optimizer-client. Update TypeScript configuration and documentation for usage instructions.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
       "@route-kun/api": ["packages/api/src"],
       "@route-kun/supabase": ["packages/supabase/src"],
       "@route-kun/ui": ["packages/ui/src"],
-      "@route-kun/optimizer-client": ["packages/optimizer-client/src"]
+      "@route-kun/optimizer-client": ["packages/optimizer-client/src"],
+      "@route-kun/msw": ["packages/msw/src"]
     }
   }
 }
