Update route management with Supabase integration, adding route and route_stops tables with RLS policies. Implement route repository for saving and retrieving routes, including diagnostics and distance metrics. Enhance API with new tRPC procedures for listing and fetching routes, ensuring user authentication. Add placeholder generation script for Turbo compatibility and update README with setup instructions for Supabase migrations.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "test": "vitest run",
     "e2e": "echo '(no e2e)'",
-    "generate": "echo '(no generate)'"
+    "generate": "node scripts/generate-placeholder.mjs"
   },
   "dependencies": {
     "@route-kun/api": "workspace:*",
