--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,6 +18,7 @@
     "@route-kun/config": "workspace:*",
     "@route-kun/domain": "workspace:*",
     "@route-kun/optimizer-client": "workspace:*",
+    "@route-kun/supabase": "workspace:*",
     "@trpc/server": "^10.45.2",
     "zod": "^3.23.8"
   },
