--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@route-kun/config": "workspace:*",
     "@route-kun/domain": "workspace:*",
     "@route-kun/ui": "workspace:*",
+    "mapbox-gl": "^3.16.0",
     "next": "^14.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
