--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,9 @@
     "typecheck": "echo 'ok'",
     "lint": "next lint",
     "test": "vitest run",
-    "e2e": "echo '(no e2e)'",
+    "e2e": "playwright test",
+    "e2e:headed": "playwright test --headed",
+    "e2e:ui": "playwright test --ui",
     "generate": "node scripts/generate-placeholder.mjs"
   },
   "dependencies": {
@@ -23,6 +25,8 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.8.3",
+    "@playwright/test": "^1.45.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.6.1",
