Update .gitignore to include additional file types and directories for TypeScript, testing, and build artifacts. Modify package.json to change test command to run end-to-end tests. Enhance globals.css for consistent styling and update layout.tsx to include metadata for the application. Improve accessibility in page.tsx and route-map.tsx by adding data-testid attributes. Refactor e2e tests for better accessibility checks and fallback handling. Add Week 3 implementation plan document outlining tasks for observability, rate limiting, and performance measurement.

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,15 @@ node_modules/
 .next/
 dist/
 .turbo/
+.swc/
 
 # Python
 .venv/
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
 
 # Env files
 .env
@@ -19,11 +24,27 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 coverage/
+*.log
 
 # OS/Editor
 .DS_Store
 .idea/
 .vscode/
+*.swp
+*.swo
+*~
+
+# Testing
+test-results/
+playwright-report/
+playwright/.cache/
+
+# TypeScript
+*.tsbuildinfo
+
+# Build / Deploy
+.vercel/
+.output/
 
 # Generated artifacts
 apps/web/src/__generated__/
