--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -155,7 +155,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Install Playwright Browsers
-        run: pnpm --filter web exec playwright install --with-deps
+        run: cd apps/web && pnpm exec playwright install --with-deps chromium
 
       - name: Build app
         run: pnpm --filter web build
