--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "turbo run dev --parallel",
     "typecheck": "turbo run typecheck",
     "lint": "turbo run lint",
-    "test": "turbo run test e2e",
+    "test": "turbo run test",
     "e2e": "turbo run e2e",
     "generate": "turbo run generate"
   },
