Add repository guidelines and update dependencies
- Introduced AGENTS.md to outline project structure, build commands, coding style, testing guidelines, and commit/pull request practices.
- Updated pnpm-lock.yaml to include new dependencies: @tanstack/react-query, @trpc/client, @trpc/react-query, @trpc/server, and superjson.
- Enhanced tsconfig.base.json with additional path mappings for better module resolution.
- Updated package.json in the web app to include new dependencies for tRPC and superjson.
- Refactored Playwright and Vitest configurations for improved testing setup.
- Added new API route handler and tests for tRPC integration, ensuring proper context handling and correlation ID propagation.
- Created layout and API test files to support new functionality and ensure robust testing coverage.

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,6 +20,7 @@
     "@route-kun/optimizer-client": "workspace:*",
     "@route-kun/supabase": "workspace:*",
     "@trpc/server": "^10.45.2",
+    "superjson": "^2.2.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
