--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,12 +12,19 @@
     "baseUrl": ".",
     "paths": {
       "@route-kun/config": ["packages/config/src"],
+      "@route-kun/config/*": ["packages/config/src/*"],
       "@route-kun/domain": ["packages/domain/src"],
+      "@route-kun/domain/*": ["packages/domain/src/*"],
       "@route-kun/api": ["packages/api/src"],
+      "@route-kun/api/*": ["packages/api/src/*"],
       "@route-kun/supabase": ["packages/supabase/src"],
+      "@route-kun/supabase/*": ["packages/supabase/src/*"],
       "@route-kun/ui": ["packages/ui/src"],
+      "@route-kun/ui/*": ["packages/ui/src/*"],
       "@route-kun/optimizer-client": ["packages/optimizer-client/src"],
-      "@route-kun/msw": ["packages/msw/src"]
+      "@route-kun/optimizer-client/*": ["packages/optimizer-client/src/*"],
+      "@route-kun/msw": ["packages/msw/src"],
+      "@route-kun/msw/*": ["packages/msw/src/*"]
     }
   }
 }
