--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,10 +19,15 @@
     "@route-kun/config": "workspace:*",
     "@route-kun/domain": "workspace:*",
     "@route-kun/ui": "workspace:*",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "10.45.2",
     "mapbox-gl": "^3.16.0",
     "next": "^14.2.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "superjson": "^2.2.5"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.8.3",
